--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
     paths:
-      - 'playbooks/vars/**'
+      - 'playbooks/**'
 
 jobs:
   lint:
@@ -21,7 +21,7 @@ jobs:
       uses: ansible/ansible-lint-action@master
       with:
         targets: |
-           playbooks/deploy-branch-readyaml.yaml
+           playbooks/playbook.yml
         override-deps: |
           ansible==2.8
           ansible-lint==4.2.0
