--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -8,7 +8,7 @@
 
     - name: include variables for devices
       include_vars:
-        file: config.yml
+        file: config.yaml
         #name: devices
 
    
