--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -10,5 +10,8 @@
       include_vars:
         file: config.yaml
         #name: devices
+        
+    - debug:
+        msg: "{{ debug message }}"
 
    
