--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -17,5 +17,18 @@
         file: config.yaml
         #name: devices
 
+    - name: GET The UPLINK IP
+      uri:
+        url: https://api.meraki.com/api/v1/organizations/265528/appliance/uplink/statuses
+        method: GET
+        headers:
+          Content-Type: application/json
+          Accept: application/json
+          X-Cisco-Meraki-API-Key: "{{ auth }}"
+        return_content: true
+        follow_redirects: all
+        validate_certs: true
+      register: meraki_uplink
+
     - debug:
         msg: "{{ VPNNAME }}"
