--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -7,6 +7,7 @@
     region: eu-west-1
     count: 1
     auth_key: "{{ auth }}"
+    AWS_ACCESS_KEY_ID: "{{ AWS_ACCESS_KEY_ID }}"
   vars_files:
     - config.yaml
 
