--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -48,5 +48,6 @@
       register: meraki_subnets
 
 # AWS part
-    - ec2_vpc_net_info:
-      register: vpc_ids
+    - name: GET AWS Network info
+      ec2_vpc_net_info:
+        register: vpc_ids
