--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -4,7 +4,7 @@
   connection: localhost
   gather_facts: False
   vars:
-    region: eu-west-1
+    EC2_REGION: eu-west-1
     count: 1
     auth_key: "{{ auth }}"
     AWS_ACCESS_KEY_ID: "{{ AWS_ACCESS_KEY_ID }}"
