--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -11,9 +11,12 @@
     auth_key: "{{ auth }}"
     AWS_ACCESS_KEY_ID: "{{ AWS_ACCESS_KEY_ID }}"
     AWS_SECRET_ACCESS_KEY: "{{ AWS_SECRET_ACCESS_KEY }}"
+    
   vars_files:
     - config.yaml
 
+    - debug:
+        msg: "{{ TESTSECRET }}"
   tasks:
 
     - name: include variables for devices
