--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -11,6 +11,7 @@
     auth_key: "{{ auth }}"
     AWS_ACCESS_KEY_ID: "{{ AWS_ACCESS_KEY_ID }}"
     AWS_SECRET_ACCESS_KEY: "{{ AWS_SECRET_ACCESS_KEY }}"
+    TESTSECRET: "{{ TESTSECRET }}"
 
   vars_files:
     - config.yaml
