--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,6 @@ jobs:
       env:
         auth: ${{ secrets.MERAKIAPI }}
         TESTSECRET: ${{ secrets.TESTSECRET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
       run: sh ./scripts/entrypoint.sh
