--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -9,7 +9,7 @@
     AWS_ACCESS_KEY_ID: "{{ AWS_ACCESS_KEY_ID }}"
     AWS_SECRET_ACCESS_KEY: "{{ AWS_SECRET_ACCESS_KEY }}"
     TESTSECRET: "{{ TESTSECRET }}"
-    REGION: "{{ REGION }}"
+    region: "{{ REGION }}"
 
   vars_files:
     - config.yaml
