--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -10,6 +10,7 @@
     AWS_SECRET_ACCESS_KEY: "{{ AWS_SECRET_ACCESS_KEY }}"
     TESTSECRET: "{{ TESTSECRET }}"
     region: "{{ REGION }}"
+    aws-region: eu-west-1
 
   vars_files:
     - config.yaml
