--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -31,7 +31,7 @@
         msg: "{{ AWS_ACCESS_KEY_ID }}"
 
     - debug:
-        msg: "{{ region }}
+        msg: "{{ region }}"
 
     - name: GET The UPLINK IP
       uri:
