--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -82,3 +82,6 @@
         aws_secret_key: "{{ aws_secret_key }}"
         aws_access_key: "{{ aws_access_key }}"
       register: vpc_ids
+
+    - debug:
+        msg: "{{ vpc_ids }}"
