--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -9,8 +9,8 @@
     aws_access_key: "{{ AWS_ACCESS_KEY_ID }}"
     aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
     TESTSECRET: "{{ TESTSECRET }}"
-    #region: "{{ REGION }}"
-    region: us-east-1
+    region: "{{ REGION }}"
+    #region: us-east-1
 
   vars_files:
     - config.yaml
