--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -62,3 +62,12 @@
 
     #- debug:
         #msg: "{{ vpc_ids }}"
+
+    - name: Create a new vgw attached to a specific VPC
+      ec2_vpc_vgw:
+        state: present
+        region: "{{ region }}"
+        vpc_id: "{{vpc_ids.vpcs.0.vpc_id}}"
+        name: Ansible-VGW
+        type: ipsec.1
+      register: created_vgw
