--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -67,6 +67,8 @@
       ec2_vpc_vgw:
         state: present
         region: "{{ region }}"
+        aws_secret_key: "{{ aws_secret_key }}"
+        aws_access_key: "{{ aws_access_key }}"
         vpc_id: "{{vpc_ids.vpcs.0.vpc_id}}"
         name: Ansible-VGW
         type: ipsec.1
