--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -74,5 +74,28 @@
         type: ipsec.1
       register: created_vgw
 
+    #- debug:
+        #msg: "{{ created_vgw }}"
+
+    - name: Propoage routes from the newly created VGW
+      ec2_vpc_route_table:
+        vpc_id: "{{vpc_ids.vpcs.0.vpc_id}}"
+        route_table_id: "{{rtid}}"
+        state: present
+        propagating_vgw_ids: "{{created_vgw.vgw.id}}"
+        subnets: subnet-98dea0d0
+      register: route_table
+
     - debug:
-        msg: "{{ created_vgw }}"
+        msg: "{{ route_table }}"
+
+    - name: Create Customer Gateway
+      ec2_customer_gateway:
+        bgp_asn: 12345
+        ip_address: "{{meraki_uplink.json.1.uplinks.0.publicIp}}"
+        name: Ansible_Meraki_MX
+        region: eu-west-1
+      register: cgw 
+
+    - debug:
+        msg: "{{ cgw }}"
