--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -9,7 +9,7 @@
     aws_access_key: "{{ AWS_ACCESS_KEY_ID }}"
     aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
     region: "{{ REGION }}"
-    PSK: "{{ PSK }}
+    PSK: "{{ PSK }}"
 
   vars_files:
     - config.yaml
