--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -10,6 +10,7 @@
     aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
     region: "{{ REGION }}"
     PSK: "{{ PSK }}"
+    RTID: "{{ RTID }}"
 
   vars_files:
     - config.yaml
@@ -81,7 +82,7 @@
     - name: Propoage routes from the newly created VGW
       ec2_vpc_route_table:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
-        route_table_id: "{{ rtid }}"
+        route_table_id: "{{ RTID }}"
         state: present
         propagating_vgw_ids: "{{ created_vgw.vgw.id }}"
         subnets: subnet-98dea0d0
