--- a/playbooks/config.yaml
+++ b/playbooks/config.yaml
@@ -1,6 +1,6 @@
 VPNNAME: MXtoAWS3
 PINGIP: 172.31.26.184
-comment1: "Allow HTTPS Traffic"
+comment1: "Deny HTTPS Traffic"
 policy1: deny
 protocol1: tcp
 destPort1: 443
