--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -106,7 +106,7 @@
       ec2_vpc_route_table:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
         region: "{{ region }}"
-        route_table_id: "{{ route_table.route_table_id }}"
+        route_table_id: "{{ route_table.route_table.route_table_id.id }}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{ igw.gateway_id }}"
