--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -111,7 +111,7 @@
         #routes:
           #- dest: 0.0.0.0/0
             #gateway_id: "{{ igw.gateway_id }}"
-        #register: public_route_table
+        register: public_route_table
 
     - debug:
         msg: "{{ public_route_table }}"
