--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -108,9 +108,9 @@
         region: "{{ region }}"
         route_table_id: "{{ route_table.route_table.route_table_id }}"
         purge_subnets: false
-        #routes:
-          #- dest: 0.0.0.0/0
-            #gateway_id: "{{ igw.gateway_id }}"
+        routes:
+          - dest: 10.0.0.0/0
+            gateway_id: "{{ igw.gateway_id }}"
         register: public_route_table
 
     - debug:
