--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -84,7 +84,7 @@
       ec2_vpc_route_table:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
         region: "{{ region }}"
-        route_table_id: "{{ RTID }}"
+        route_table_id: rtb-fe6f4887
         state: present
         propagating_vgw_ids: "{{ created_vgw.vgw.id }}"
         subnets: subnet-98dea0d0
