--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -88,6 +88,9 @@
         state: present
         lookup: id
         purge_subnets: false
+        routes:
+				  - dest: 0.0.0.0/0
+            gateway_id: igw-67e6c800
         propagating_vgw_ids: "{{ created_vgw.vgw.id }}"
       register: route_table
 
