--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -189,6 +189,15 @@
             "srcPort": "{{ srcPort1 }}",
             "srcCidr": "{{ srcCidr1 }}",
             "syslogEnabled": "{{ syslogEnabled1 }}"
+        }, {
+            "comment": "{{ comment2 }}",
+            "policy": "{{ policy2 }}",
+            "protocol": "{{ protocol2 }}",
+            "destPort": "{{ destPort2 }}",
+            "destCidr": "{{ destCidr2 }}",
+            "srcPort": "{{ srcPort2 }}",
+            "srcCidr": "{{ srcCidr2 }}",
+            "syslogEnabled": "{{ syslogEnabled2 }}"
         }
         ]
         }
