--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,18 +35,18 @@ jobs:
         RTID: ${{ secrets.RTID }}
       run: sh ./scripts/entrypoint.sh
 
-    #- name: AWS SSM Send-Command
-      #uses: peterkimzz/aws-ssm-send-command@1.0.2
-      #id: ssm
-      #with:
-          #aws-region: eu-west-1
-          #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          #instance-ids: ${{ secrets.INSTANCE-IDS }}
-          #working-directory: /home/ubuntu/application
-          #command: ls -al
-          #comment: Hello world!
+    - name: AWS SSM Send-Command
+      uses: peterkimzz/aws-ssm-send-command@1.0.2
+      id: ssm
+      with:
+          aws-region: eu-west-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          instance-ids: ${{ secrets.INSTANCE-IDS }}
+          working-directory: /home/ubuntu/application
+          command: ls -al
+          comment: Hello world!
 
     # Catch SSM outputs
-    #- name: Get the outputs
-      #run: echo "The Command id is ${{ steps.ssm.outputs.command-id }}"
+    - name: Get the outputs
+      run: echo "The Command id is ${{ steps.ssm.outputs.command-id }}"
