Revert "Update playbook.yml"
This reverts commit 167e837bfa2bda137d50bfeefe4e7fc75d4d67a7.

--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -89,7 +89,7 @@
       ec2_vpc_route_table:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
         region: "{{ region }}"
-        route_table_id: "{{ RTID }}"
+        route_table_id: rtb-fe6f4887
         state: present
         lookup: id
         purge_subnets: false
