Revert "Update playbook.yml"
This reverts commit 3013a8228d519b26a59c64d5216ba452199fc623.

--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -193,7 +193,9 @@
             "comment": "{{ comment2 }}",
             "policy": "{{ policy2 }}",
             "protocol": "{{ protocol2 }}",
+            "destPort": "{{ destPort2 }}",
             "destCidr": "{{ destCidr2 }}",
+            "srcPort": "{{ srcPort2 }}",
             "srcCidr": "{{ srcCidr2 }}",
             "syslogEnabled": "{{ syslogEnabled2 }}"
         }
