--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           aws-region: eu-west-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          instance-ids: ["i-08793cba603e6ef4f"]
+          instance-ids: "i-08793cba603e6ef4f,i-08793cba603e6ef4f"
           working-directory: /home/ubuntu/application
           command: ls -al
           comment: Hello world!
