--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           instance-ids: ${{ secrets.INSTANCE_IDS }}
           working-directory: /home/ubuntu
-          command: ls -al
-          comment: Hello world!
+          command: ping -c 1 8.8.8.8
+          comment: Ping to Google
 
     # Catch SSM outputs
     - name: Get the outputs
