--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,16 +34,7 @@ jobs:
         PSK: ${{ secrets.PSK }}
         RTID: ${{ secrets.RTID }}
       run: sh ./scripts/entrypoint.sh
-
-    - shell: bash
-      env:
-        auth: ${{ secrets.MERAKIAPI }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        PSK: ${{ secrets.PSK }}
-        RTID: ${{ secrets.RTID }}
-      run: aws ssm get-command-invocation --command-id 091c12cd-463a-4924-a345-f5b86b01478f --instance-id i-0b8d9c6ca369c6e34 --region eu-west-1
-      
+  
     - name: AWS SSM Send-Command
       uses: peterkimzz/aws-ssm-send-command@master
       id: ssm
@@ -60,3 +51,13 @@ jobs:
     - name: Get the outputs
       run: echo "The Command id is ${{ steps.ssm.outputs.command-id }}"
       #run: echo "The Command is ${{ steps.ssm.outputs }}"
+
+- shell: bash
+      env:
+        auth: ${{ secrets.MERAKIAPI }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        PSK: ${{ secrets.PSK }}
+        RTID: ${{ secrets.RTID }}
+      run: aws ssm get-command-invocation --command-id ${{ steps.ssm.outputs.command-id }} --instance-id i-0b8d9c6ca369c6e34 --region eu-west-1
+    
