--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
         targets: |
            playbooks/playbook.yml
         override-deps: |
-          #ansible==2.9.12
-          #ansible-lint==4.3.5
+          ansible==2.9.12
+          ansible-lint==4.3.5
         
     - shell: bash
       env:
