--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,5 +54,5 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: aws ssm get-command-invocation --command-id ${{ steps.ssm.outputs.command-id }} --instance-id i-0b8d9c6ca369c6e34 --region ${{ secrets.AWS_REGION }}
+      run: aws ssm get-command-invocation --command-id ${{ steps.ssm.outputs.command-id }} --instance-id ${{ secrets.INSTANCE_IDS }} --region ${{ secrets.AWS_REGION }}
     
