--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -5,7 +5,7 @@
   gather_facts: False
   vars:
     count: 1
-    auth_key: "{{ MERAKI_API_KEY }}"
+    #auth_key: "{{ MERAKI_API_KEY }}"
     aws_access_key: "{{ AWS_ACCESS_KEY_ID }}"
     aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
     region: "{{ REGION }}"
@@ -65,7 +65,7 @@
       ec2_vpc_net_info:
         region: "{{ region }}"
         aws_secret_key: "{{ aws_secret_key }}"
-        aws_access_key: "{{ aws_access_key }}"
+        #aws_access_key: "{{ aws_access_key }}"
       register: vpc_ids
 
     - debug:
