--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -63,7 +63,7 @@
 # AWS part
     - name: GET AWS Network info
       ec2_vpc_net_info:
-        region: "{{ region }}"
+        #region: "{{ region }}"
         #aws_secret_key: "{{ aws_secret_key }}"
         #aws_access_key: "{{ aws_access_key }}"
       register: vpc_ids
@@ -74,7 +74,7 @@
     - name: Create a new vgw attached to a specific VPC
       ec2_vpc_vgw:
         state: present
-        region: "{{ region }}"
+        #region: "{{ region }}"
         #aws_secret_key: "{{ aws_secret_key }}"
         #aws_access_key: "{{ aws_access_key }}"
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
@@ -88,7 +88,7 @@
     - name: Propagate routes from the newly created VGW
       ec2_vpc_route_table:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
-        region: "{{ region }}"
+        #region: "{{ region }}"
         route_table_id: rtb-fe6f4887
         state: present
         lookup: id
@@ -105,7 +105,7 @@
     - name: Identify the VPC IGW
       ec2_vpc_igw:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
-        region: "{{ region }}"
+        #region: "{{ region }}"
         state: present
       register: igw
 
@@ -117,7 +117,7 @@
         bgp_asn: 12345
         ip_address: "{{ meraki_uplink.json.1.uplinks.0.publicIp }}"
         name: Ansible_Meraki_MX
-        region: "{{ region }}"
+        #region: "{{ region }}"
       register: cgw
 
     - debug:
@@ -131,7 +131,7 @@
       ec2_vpc_vpn:
         state: present
         static_only: true
-        region: "{{ region }}"
+        #region: "{{ region }}"
         vpn_gateway_id: "{{ created_vgw.vgw.id }}"
         customer_gateway_id: "{{ cgw.gateway.customer_gateway.customer_gateway_id }}"
         tunnel_options:
