--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -131,7 +131,7 @@
       ec2_vpc_vpn:
         state: present
         static_only: true
-        #region: "{{ region }}"
+        region: "{{ region }}"
         vpn_gateway_id: "{{ created_vgw.vgw.id }}"
         customer_gateway_id: "{{ cgw.gateway.customer_gateway.customer_gateway_id }}"
         tunnel_options:
