--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -175,7 +175,7 @@
         headers:
           Content-Type: application/json
           Accept: application/json
-          X-Cisco-Meraki-API-Key: 1eb7b53957a29250a67050d7290c37cd7869083b
+          X-Cisco-Meraki-API-Key: "{{ MERAKI_API_KEY }}"
         return_content: true
         follow_redirects: all
         validate_certs: true
