--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -5,7 +5,6 @@
   gather_facts: False
   vars:
     count: 1
-    #auth_key: "{{ MERAKI_API_KEY }}"
     aws_access_key: "{{ AWS_ACCESS_KEY_ID }}"
     aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
     region: "{{ REGION }}"
@@ -23,13 +22,6 @@
     - name: include variables for devices
       include_vars:
         file: config.yaml
-        #name: devices
-
-    - debug:
-        msg: "{{ VPNNAME }}"
-
-    - debug:
-        msg: "VPNNAME"
 
     - name: GET The MX UPLINK Public IP
       uri:
@@ -43,9 +35,6 @@
         follow_redirects: all
         validate_certs: true
       register: meraki_uplink
-
-    #- debug:
-        #msg: "{{ meraki_uplink }}"
 
     - name: GET MX Appliance Subnets
       uri:
@@ -64,8 +53,6 @@
     - name: GET AWS Network info
       ec2_vpc_net_info:
         region: "{{ region }}"
-        #aws_secret_key: "{{ aws_secret_key }}"
-        #aws_access_key: "{{ aws_access_key }}"
       register: vpc_ids
 
     - debug:
@@ -75,8 +62,6 @@
       ec2_vpc_vgw:
         state: present
         region: "{{ region }}"
-        #aws_secret_key: "{{ aws_secret_key }}"
-        #aws_access_key: "{{ aws_access_key }}"
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
         name: Ansible-VGW
         type: ipsec.1
@@ -109,8 +94,8 @@
         state: present
       register: igw
 
-    #- debug:
-        #msg: "{{ igw.gateway_id }}"
+    - debug:
+        msg: "{{ igw.gateway_id }}"
 
     - name: Create Customer Gateway
       ec2_customer_gateway:
