--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         RTID: ${{ secrets.RTID }}
       run: sh ./scripts/entrypoint.sh
   
-    - name: AWS SSM Send-Command
+    - name: AWS SSM Send-Command - Execute ping
       uses: peterkimzz/aws-ssm-send-command@master
       id: ssm
       with:
@@ -52,7 +52,8 @@ jobs:
         time: '30s'
     
     # Catch the output of the ping test
-    - shell: bash
+    - name: AWS SSM Send-Command - Ping results download
+      shell: bash
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
